force-app/main/default/objects/Template_Domain_Definition__c/Template_Domain_Definition__c.object-meta.xml
<CustomObject>
    <description
  >Editable runtime domain row belonging to an assessment template.</description>
    <label>Template Domain Definition</label>
    <nameField>
        <label>Template Domain Definition Number</label>
        <displayFormat>TD-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Domain Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>