force-app/main/default/objects/Template_Domain_Definition__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <description
  >Runtime template that owns the domain definition row.</description>
    <label>Assessment Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Domain Definitions</relationshipLabel>
    <relationshipName>Domain_Definitions</relationshipName>
    <type>MasterDetail</type>
</CustomField>