force-app/main/default/objects/Template_Domain_Definition__c/fields/Default_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Default_Confidence__c</fullName>
    <description
  >Default confidence level suggested for the domain summary.</description>
    <label>Default Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Confidence_Level</valueSetName>
    </valueSet>
</CustomField>