force-app/main/default/objects/Template_Domain_Definition__c/fields/Guidance_Text__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Text__c</fullName>
    <description
  >Runtime guidance shown to assessors for the domain.</description>
    <label>Guidance Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>