force-app/main/default/objects/Template_Domain_Definition__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <description
  >Marks the domain as required for completeness calculations.</description>
    <label>Is Required</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>